<resources>

    <string name="app_name">AGS</string>
    <string name="members">Medlemmar</string>
    <string name="attendance">Närvarorapportera</string>
    <string name="stats">Statistik</string>
    <string name="administer">Administrera</string>
    <string name="schedule">Schema</string>
    <string name="database">Databas</string>
    <string name="log_out">Logga ut</string>
    <string name="title_activity_admin_login">Logga in</string>
    <string name="action_not_allowed">Behörighet saknas</string>
    <string name="generic_name">Samtliga</string>
    <string name="add">Lägg till</string>
    <string name="save_changes">Spara ändringar</string>
    <string name="remove">Ta bort</string>
    <string name="group">Grupp</string>
    <string name="sport">Idrott</string>
    <string name="activity_type">Aktivitetstyp</string>
    <string name="stats_not_implemented">Ingen statistik att visa</string>

    <!-- Strings related to login -->
    <string name="password">Lösenord</string>
    <string name="sign_in">Logga in</string>
    <string name="choose_password">Välj ett lösenord</string>
    <string name="invalid_password">Ogiltigt lösenord</string>
    <string name="empty_password">Lösenordsfältet är tomt</string>
    <string name="updated_password_1">Nytt lösenord för superadministratör:</string>

    <!-- Strings related to admin main -->
    <string name="change_password">Byt lösenord</string>

    <!-- Strings related to password change -->
    <string name="choose">Välj</string>
    <string name="change">Byt</string>
    <string name="title_infix">lösenord för</string>
    <string name="super_admin">superadministratör</string>
    <string name="regular_admin">administratör</string>
    <string name="super_admin_capitalized">Superadministratör</string>
    <string name="regular_admin_capitalized">Administratör</string>
    <string name="current_password">Nuvarande lösenord</string>
    <string name="new_password">Nytt lösenord</string>
    <string name="repeat_password">Upprepa lösenord</string>
    <string name="current_password_mismatch">Nuvarande lösenord felaktigt</string>
    <string name="new_password_mismatch">Nytt lösenord upprepades inte korrekt</string>
    <string name="password_changed">Lösenordet har ändrats</string>

    <!-- Strings related to database management -->
    <string name="sports">Idrotter</string>
    <string name="groups">Grupper</string>
    <string name="fees">Avgifter</string>
    <string name="activity_types">Aktivitetstyper</string>
    <string name="is_active">Aktiv</string>
    <string name="invalid_table">Ogiltig tabell</string>
    <string name="group_name">Grupp</string>
    <string name="group_shorthand">Visningsnamn i schema</string>
    <string name="sport_name">Idrott</string>
    <string name="sport_shorthand">Kortform</string>
    <string name="type_shorthand">Visningsnamn i schema</string>
    <string name="fee_name">Avgiftstyp</string>
    <string name="fee_shorthand">Kortform</string>
    <string name="fee_periodicity">Periodicitet</string>
    <string name="row_deactivate">Inaktivera</string>
    <string name="row_activate">Aktivera</string>
    <string name="row_add">Lägg till</string>
    <string name="activity_colour">Visningsfärg</string>
    <string name="import_db">Importera</string>
    <string name="export_db">Exportera</string>
    <string name="imported">Databasen har importerats</string>
    <string name="exported">Databasen har exporterats</string>
    <string name="export_failed">Databasen kunde ej exporteras</string>
    <string name="import_failed">Kunde ej importera databas</string>
    <string name="import_failed_no_file">Kunde ej importera (ags_import.db hittades inte)</string>

    <!-- Strings related to the member list -->
    <string name="list_members_group">Grupp:</string>
    <string name="add_new_member">Ny medlem</string>
    <string name="first_name">Förnamn</string>
    <string name="family_name">Efternamn</string>
    <string name="personal_id_number">Personnumer</string>
    <string name="guardian">Målsman</string>
    <string name="email">E-post</string>
    <string name="phone">Telefon</string>
    <string name="belongs_to_group">Hör till grupp:</string>
    <string name="member_fees">Avgifter:</string>
    <string name="signed_ada">Signerat antidopingavtal</string>
    <string name="add_member_title">Lägg till ny medlem</string>
    <string name="edit_member_title">Uppdatera medlemsuppgifter</string>
    <string name="invalid_personal_id">Ogiltigt personnummer</string>
    <string name="first_name_missing">Förnamn saknas</string>
    <string name="family_name_missing">Efternamn saknas</string>
    <string name="invalid_email">Ogiltig E-postaddress</string>
    <string name="edit_group_members">Redigera grupp</string>
    <string name="no_ada">Underskrift saknas</string>
    <string name="edit_group">Välj medlemmar i grupp:</string>

    <!-- Strings related to timetable -->
    <string name="previous">&lt;</string>
    <string name="next">&gt;</string>
    <string name="week_placeholder">2000, vecka 0</string>
    <string name="date_placeholder">0/0</string>
    <string name="time_placeholder">00:00</string>
    <string name="sport_placeholder">Idrott</string>
    <string name="group_placeholder">Grupp</string>
    <string name="monday">Måndag</string>
    <string name="tuesday">Tisdag</string>
    <string name="wednesday">Onsdag</string>
    <string name="thursday">Torsdag</string>
    <string name="friday">Fredag</string>
    <string name="saturday">Lördag</string>
    <string name="sunday">Söndag</string>
    <string name="edit_timetable">Ändra</string>
    <string name="save_timetable">Spara schema</string>
    <string name="add_unlisted_activity">Rapportera icke schemalagd aktivitet</string>
    <string name="timetable_title">Vecka %1$d, %2$d</string>
    <string name="timetable_activity_type">Typ</string>
    <string name="timetable_sport">Idrott</string>
    <string name="timetable_group">Grupp</string>
    <string name="timetable_start">Starttid</string>
    <string name="timetable_end">Sluttid</string>
    <string name="valid_from">Gäller fr o m</string>
    <string name="valid_through">Gäller t o m</string>

    <!-- Strings related to new activities and roll calls -->
    <string name="roll_call_title_template">Närvarande %1$s %2$s-%3$s (%4$s)</string>
    <string name="new_activity">Ny aktivitet</string>
    <string name="date">Datum</string>
    <string name="start_time">Startid</string>
    <string name="end_time">Sluttid</string>
    <string name="proceed_to_roll_call">Rapportera närvaro</string>
    <string name="invalid_date">Ogiltigt datum</string>
    <string name="invalid_start_time">Ogiltig starttid</string>
    <string name="invalid_end_time">Ogiltig sluttid</string>
    <string name="save_roll_call">Spara närvarorapport</string>
    <string name="present_slash_leader">Närv./Ledare</string>
    <string name="number_picked">%1$d vald%2$s, varav %3$d ledare</string>
    <string name="replaces_scheduled">Ersätter schemalagda aktiviteter</string>
    <string name="modify_activity">Ändra detaljer</string>
    <string name="modify_activity_title">Uppdatera aktivitet</string>


</resources>
