<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:baselineAligned="false"
    android:gravity="center">

    <EditText
        android:id="@+id/current_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/current_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_password" />

    <EditText
        android:id="@+id/new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="textPassword"
        android:paddingTop="@dimen/separation"/>

    <TextView
        android:id="@+id/new_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/repeat_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/repeat_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password" />

    <Button
        android:id="@+id/change_password_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginTop="@dimen/margin" />

</LinearLayout>
