<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:baselineAligned="false">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/admin_members_button"
            style="@style/LargeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/members"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/schedule_button"
            style="@style/LargeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/schedule"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/database_button"
            style="@style/LargeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/database" />

        <Button
            android:id="@+id/change_password_button"
            style="@style/LargeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/change_password"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/log_out_button"
            style="@style/LargeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:text="@string/log_out" />

    </LinearLayout>

</LinearLayout>