<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin"
    android:paddingBottom="@dimen/margin"
    android:paddingLeft="@dimen/lonely_list_padding"
    android:paddingRight="@dimen/lonely_list_padding"
    android:baselineAligned="false"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/present_slash_leader" />

    <ListView
        android:id="@+id/roll_call_member_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <SearchView
        android:id="@+id/roll_call_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/roll_call_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

    <Button
        android:id="@+id/add_new_member_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/add_new_member" />

    <Button
        android:id="@+id/modify_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:visibility="gone"
        android:text="@string/modify_activity" />

    <Button
        android:id="@+id/roll_call_save_button"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/save_roll_call" />

    </LinearLayout>


</LinearLayout>
